fix scrolling and scrollbars

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -96,6 +96,10 @@ img {
 }
 
 @media (max-width: 576px) {
+    body {
+        overflow-x: clip;
+    }
+    
     .main {
         padding: 0 10px;
     }
